# beatbot

./: .env.example  .gitignore  .prettierrc.json  Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml
migrations/: 20260111125940_initial.sql
src/: main.rs  music_events.rs
src/commands/: clear.rs  config.rs  filters.rs  info.rs  join.rs  leave.rs  mod.rs  pause.rs  play.rs  queue.rs  remove.rs  resume.rs  seek.rs  skip.rs  stop.rs  volume.rs
src/database/: mod.rs  models.rs  queries.rs
src/utils/: announcements.rs  autodisconnect.rs  embeds.rs  emojis.rs  filters.rs  mod.rs  permissions.rs  player_data.rs  voicechannel.rs
src/websocket/: server.rs
