[package]
name = "onbeat"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
lavalink-rs = { version = "0.14.3", default-features = false, features = ["songbird", "serenity", "tungstenite-native-tls", "macros"] }
poise = { version = "0.6.1", default-features = false, features = ["cache", "chrono", "handle_panics"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = "0.12.5"
songbird = { version = "0.5.0", features = ["gateway", "serenity", "native"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
